# analytics-engineer

./: .gitignore  README.md  pyproject.toml
ab-testing/: README.md  ab_analysis.ipynb  ab_test_analysis.py  calculate_metrics.py  random_select.py
ab-testing/data/: activity_all.csv  assignments.csv  ctr_all.csv
best-practice/: context_manager.py  decorators.py  practice.py  pyproject.toml  scope_closures.py  text_data.py
data-analyst/bikeshare/: pyproject.toml
data-analyst/dvdrental/: dvd-rental.ipynb  notes.md  pyproject.toml  ~$sql-project.pptx
data-analyst/dvdrental/sql-project/: queries.txt  sql-project.pptx
data-architect/: data_engineer_architect.md  databricks.md  modern_data_architecture.md
data-architect/mssql/: aggregate_data.sql  crud.sql  join_tables.sql  sql_server.sql
data-architect/pg/: docker-compose.yml  notes.md
data-architect/pg/edb-pg/: ebank.sql
data-architect/pg/sample_data/: constant_running_query.py
data-engineer/: de_101.md
data-engineer/data-build-tool/: dbt.md
data-engineer/data-modeling/: data_modeling.md  postgres_db.py
data-engineer/gcp/: bigquery.sql
fabric-analytics/: README.md
