[tool.poetry]
name = "best-practice"
version = "0.1.0"
description = "Python Programming Best Practices"
authors = ["augustine0890 <augustino0890@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
