[tool.poetry]
name = "dvdrental"
version = "0.1.0"
description = ""
authors = ["augustine0890 <augustino0890@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.2"
ipykernel = "^6.29.5"
psycopg2-binary = "^2.9.10"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
